Fix navbar words not showing

--- a/opera_museum/museum/static/museum/navbar/css/navbar.css
+++ b/opera_museum/museum/static/museum/navbar/css/navbar.css
@@ -24,8 +24,8 @@
 
 .nav {
     float: left;
-	margin-top: -25px;
-    margin-left: 360px;
+	margin-top: -23px;
+    margin-left: 366px;
 }
 
 .nav a {
@@ -33,7 +33,7 @@
 	margin: 0px 3px 0px 21px;
 	color: #666;
     font-size: 18px;
-    font-family: 'STHeiTi';
+    font-family: 'STXiHei';
 	text-decoration: none;
 }
 
